--- a/gooverseas/gooverseas/register.html
+++ b/gooverseas/gooverseas/register.html
@@ -64,53 +64,72 @@
 
 
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
-
-
-			<div class="col-md-12 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');" href="register.html">
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">New</span>-->
-<!--							<span class="day">企业业务</span>-->
-<!--						</div>-->
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading" ><a href="register.html">公司注册</a></h3>
-						<p>-提供西班牙本地公司注册流程咨询服务，也可全程代办。</p>
-						<p>-为企业提供西班牙税务、法律高端咨询。</p>
+		<div class="row" class = "wrapper">
+			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry ">
+					<h1 class="mb-3 text-center align-content-center ">西班牙公司注册服务</h1>
+					<h3 class="mb-3 text-center align-content-center ">只需交给我们，效率更快更省心</h3>
+<!--					<div class="meta">-->
+<!--						<div><a><span class="icon-calendar"></span> 28 Feb, 2023</a></div>-->
+<!--					</div>-->
+					<div  class="row wrapper align-items-stretch">
+						<img class = "wrapper" style="width: 100%" src="1.jpg">
 					</div>
+					<h4>西班牙公司注册流程与步骤</h4>
+					<h5>一、申请公司名称</h5>
+					<p>首先在马德里中央商业登记局申请公司名称，可以拟定五个名字。中央商业登记局确认没有相同名称的公司存在或是别的公司预留同一个名字之后，将颁发一份公司名称预留证明，这份证明的有效期为3个月，可延期一次，如果6个月的时间里公司没有成立，则该证明失效。</p>
+					<h5>二、注册资本</h5>
+					<p>有限责任公司SL. 最低注册资本为3,000欧元，股份公司SA 的最低注册资本则为60,000欧元。</p>
+					<p>资本存入银行，可以通过公司名称预留证明在银行以要成立的公司的名义开户，并存入注册资金。</p>
+
+					<h5>三、拟定公司章程</h5>
+					<p>公司的章程必须包括以下的内容：</p>
+					<p>a. 公司名称</p>
+					<p>b. 公司经营活动期限：永久或有规定时限</p>
+					<p>c. 公司办公地址</p>
+					<p>d. 公司的经营范围，例如服装进出口、酒店和餐馆等</p>
+					<p>e. 公司的注册资金金额</p>
+					<p>f. 公司行政组织结构，包括任命公司的法定代表人，可以为一人或多人，该法定代表人可以不是公司股东</p>
+					<p>g. 注明公司法定代表人是否享受薪资，该职位任期是永久制还是有规定年限，以及其在公司的权限</p>
+					<p>公司章程必须包含上述几点。此外公司法对章程有一定要求，因此须由专业人士撰写。若章程不符合要求，商业登记处会驳回公司注册申请。</p>
+
+					<h5>四、签订公司成立公证书</h5>
+					<p>准备好上述材料之后，所有的股东须到公证处签署公司成立公证书，如果股东或法定代表人无法亲自到场签字，可以委托第三人持授权书代为签字。此授权书由西班牙公证处或者西班牙驻中国领事馆出具。</p>
+
+					<h5>五、签订公司成立公证书后</h5>
+					<p>1.申请公司临时税号。</p>
+					<p>2.报税：任何企业必须进行申报季度税和年税。具体税单由公司所在大区的税务局制定。</p>
+					<p>3.商业登记局注册公司：手续需时15个工作日左右。注册完成后即可获取公司正式税号。</p>
+					<p>4.公司代表在税务局办理登记。</p>
+					<p>5.公司代表在社保局办理登记公司信息。</p>
+					<p>6.公司代表在社保局办理登记员工信息。</p>
+
+					<h4>西班牙公司注册相关服务说明</h4>
+					<h5>一、所需费用与时间</h5>
+					<p>成立一家注册资本3,001欧元的公司所涉及到的税费、公证费、商业登记处费用总计约为700-800欧元。整个注册公司过程过程需时大约一个月。</p>
+
+					<h5>二、注册地址</h5>
+					<p>公司地址必须为西班牙境内地址，我司可帮忙提供。</p>
+					<h5>三、董事股东要求</h5>
+					<p>1人或以上年满18周岁的人士担任，无国籍限制。</p>
+					<h5>四、公司名称</h5>
+					<p>需提供5个公司名称备用申请，不可重名。</p>
+					<h5>五、后期管理服务</h5>
+					<p>我司除提供西班牙公司注册地址外，后期管理还包括：公司信息变更、转股、公司注销、公司档公证认证等，为西班牙公司注册提供一整套流程化服务。</p>
+					<h5>六、西班牙VAT</h5>
+					<p>注册所需时间为1-2个月，注册完成后即可同步获得VAT增值税号。申报：西班牙VAT申报税率为21%，一年4次季度申报和1次年度申报。</p>
+					<h5>七、记账报税</h5>
+					<p>西班牙企业所得税税率为25%，在每个自然年度的7月30日前申报，通常由公司自行申报和缴纳。</p>
+					<h5>八、招聘员工</h5>
+					<p>我司提供人力资源相关服务，包括西班牙企业员工的招聘和工作合同的拟定，处理员工的社会保险和劳工部注册，员工的工资发放和相关税务，以及健康保险等企业福利。</p>
 				</div>
 			</div>
-
-
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a>公司业务代理</a></h3>
-						<p>为尚未在西班牙开设分公司的企业代理西班牙业务。</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a>战略、投资、经贸对接咨询</a></h3>
-						<p >针对南部欧洲营商环境，对企业在西业务提供战略、投资、经贸对接等方面高端咨询。</p>
-					</div>
-				</div>
-			</div>
-
 		</div>
 	</div>
-</section>
 
+</section>
 
 
 
