--- a/index_en.html
+++ b/index_en.html
@@ -16,76 +16,37 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
 
-<!--<div class="py-2 bg-info">-->
-<!--	<div class="container">-->
-<!--		<div class="row no-gutters d-flex align-items-start align-items-center px-3 px-md-0">-->
-<!--			<div class="col-lg-12 d-block">-->
-<!--				<div class="row d-flex">-->
-<!--					<span class="col-md-12 pr-4 d-flex topper align-items-center">-->
-<!--						<span class="text">-->
-<!--							<script>document.write(new Date().getFullYear());</script> 年-->
-<!--							<script>document.write(new Date().getMonth());</script> 月-->
-<!--							<script>document.write(new Date().getDate());</script> 日-->
-<!--							星期<script>document.write("日一二三四五六".charAt(new Date().getDay()));</script>-->
-<!--						</span>-->
-<!--						<span class="text" >-->
-<!--							<p style="float: right">-->
-<!--								<a href="index.html" class="text">简体中文版</a>-->
-<!--                                <a class="text">|</a>-->
-<!--								<a href="index_es.html" class="text">Español</a>-->
-<!--							</p>-->
-<!--						</span>-->
-<!--					</span>-->
-
-<!--				</div>-->
-
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</div>-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">首页</a></li>
-				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
-				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
-				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
-				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
-				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
-<!--				<li class="nav-item">-->
-<!--					<a  class="dropdown-toggle" data-toggle="dropdown">-->
-<!--						语言-->
-<!--					</a>-->
-<!--					<ul class="dropdown-menu dropdown">-->
-<!--						<li style="width: 100% "><a href="index.html" >简体中文</a></li>-->
-<!--						<li style="width: 100%"><a href="index_en.html">English</a></li>-->
-<!--						<li style="width: 100%"><a href="index_es.html">Español</a></li>-->
-<!--					</ul>-->
-<!--				</li>-->
+				<li class="nav-item active"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
+				<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
+				<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
 			</ul>
 		</div>
 		<div class="collapse navbar-collapse" >
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item dropdown">
 					<a  class="nav-item dropdown-toggle" data-toggle="dropdown">
-						简体中文
+						English
 					</a>
 					<ul class="dropdown-menu dropdown">
 <!--						<li style="width: 100% "><a href="index.html" >简体中文</a></li>-->
-						<li style="width: 100%"><a href="index_en.html">English</a></li>
+						<li style="width: 100%"><a href="index.html">简体中文</a></li>
 <!--						<li style="width: 100%"><a href="index_es.html">Español</a></li>-->
 					</ul>
 				</li>
@@ -102,11 +63,11 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Improving Minds, Building Future</h2>
-					<p><a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
-						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+					<p><a href="products_en.html" class="btn btn-light px-4 py-3">Channel Expansion</a>
+						<a href="ittech_en.html" class="btn btn-info px-4 py-3">Enterprise IT Tech</a>
 
-						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
-						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
+						<a href="gooverseas_en.html" class="btn btn-primary px-4 py-3">Services for Chinese Enterprise</a>
+						<a href="investment_en.html" class="btn btn-success px-4 py-3">Investment & Insurance</a>
 					</p>
 				</div>
 			</div>
@@ -119,49 +80,11 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">睿泽国际</h1>
 					<h2 style = "color: #f7f8f8">启迪智慧，创造未来</h2>
-					<p>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
-						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
-
-						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
-						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
-					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="slider-item" style="background-image:url(images/bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
-				<div class="col-md-12 suscribete_form">
-					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
-					<h2 style = "color: #f7f8f8">Mejorar Mentes, Construir Futuro</h2>
-					<p>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
-						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
-
-						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
-						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
 </section>
-
-<!--<div class="row">-->
-<!--	<div class="col-md-12 text-center heading-section ftco-animate">-->
-<!--		<br>-->
-<!--		<h2 class="mb-4"><span>睿泽国际</span>服务目标</h2>-->
-<!--	</div>-->
-<!--	<div class="col-md-12 text-center heading-section ftco-animate" style="background-image: url(images/bg_10.jpg);">-->
-<!--		<br>-->
-<!--		<h1 class="mb-4" style="color: #fdfafa">针对中资企业海外业务提供以下服务：</h1>-->
-<!--		<h1 class="mb-4" style="color: #fdfafa">战略、投资、经贸企业对接、渠道拓展、高级人才猎聘等</h1>-->
-<!--	</div>-->
-<!--</div>-->
 
 
 
@@ -172,27 +95,27 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="products.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+					<a href="products_en.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">1</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="products.html">渠道拓展</a></h3>
-						<p>睿泽国际为企业在伊比利亚半岛和拉美市场进行渠道拓展，与当地企业进行商务对接，并代理产品B2B销售。</p>
+						<h3 class="heading"><a href="products_en.html">Channel Expansion</a></h3>
+						<p>Expand channels for enterprises in the Iberian Peninsula and Latin American markets, conduct business docking with local enterprises, and act as an agent for B2B sales of products.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="ittech.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+					<a href="ittech_en.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">2</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ittech.html">企业IT技术</a></h3>
-						<p>睿泽国际为您提供企业IT基础设施（网络、服务器、数据中心、云）、办公软件系统、安保系统等专业解决方案。</p>
+						<h3 class="heading"><a href="ittech_en.html">Enterprise IT Tech</a></h3>
+						<p>BOI Provides professional solutions such as enterprise IT infrastructure (network, server, data center, cloud), office software system, security system, etc.</p>
 					</div>
 				</div>
 			</div>
@@ -202,28 +125,28 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="gooverseas.html" class="block-20 d-flex align-items-end" style="background-image: url('images/bg_10.jpg');">
+					<a href="gooverseas_en.html" class="block-20 d-flex align-items-end" style="background-image: url('images/bg_10.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">3</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="gooverseas.html">中资落地服务</a></h3>
-						<p>睿泽国际为中资出海企业提供端到端服务，代表未出海企业进行欧洲本地商业活动，包括欧洲本地公司注册、人才猎聘、市场营销活动策划与执行等相关业务。</p>
+						<h3 class="heading"><a href="gooverseas_en.html">Services for Chinese Enterprise</a></h3>
+						<p>Provide end-to-end services for Chinese-funded enterprises going overseas, and represent enterprises that have not gone overseas to carry out local business activities in Europe, including European local company registration, talent hunting, planning and execution of marketing activities and other related businesses.</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="investment.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+					<a href="investment_en.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">4</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment.html">金融保险</a></h3>
-						<p>睿泽国际CEO Yanik Yang作为在欧洲从业二十余年金融投资专家，为您提供最优质的金融投资与保险服务。</p>
+						<h3 class="heading"><a href="investment_en.html">Investment & Insurance</a></h3>
+						<p>BOI CEO Yanik Yang As a financial investment expert who has been working in Europe for more than 20 years, we will provide you with the best financial investment and insurance services.</p>
 					</div>
 				</div>
 			</div>
@@ -232,129 +155,16 @@
 	</div>
 </section>
 
-
-<section class="ftco-section">
-	<div class="container-fluid" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
-
-		<div class="container">
-		<div class="row justify-content-center mb-5 pb-1" >
-			<div class="col-md-8 text-center heading-section ftco-animate">
-				<br>
-				<h2 class="mb-4"><span>请查看公司</span>成功案例</h2>
-				<h3 class="mb-4" style="color: #fdfafa">Empowering Minds, Building Future</h3>
-			</div>
-		</div>
-
-		<div class="row">
-
-			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="blog-entry">
-					<div class="img-wrap d-flex align-items-stretch">
-
-						<div class="img col-md-12 col-lg-3 ftco-animate align-items-stretch" style="background-image: url(images/service3.jpg);"></div>
-						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-2">
-								<div class="px-1">
-									<H4>渠道拓展案例介绍</H4>
-									<p>睿泽国际已于VIVO等多家智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务，并从中协调与MAPFRE达成战略协议进行商业互补。</p>
-								</div>
-								<div class="d-flex align-items-end mt-4" >
-									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="blog-entry">
-					<div class="img-wrap d-flex align-items-stretch">
-
-						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service2.jpg);"></div>
-						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-2">
-								<div class="px-1">
-									<H4>IT解决方案案例介绍</H4>
-									<p>西班牙本地企业G公司，其新上线电商业务采用了最新云技术，睿泽国际作为技术顾问，协助其完成业务上线，并参与其营销活动。</p>
-								</div>
-								<div class="d-flex align-items-center mt-4">
-									<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-
-			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="blog-entry">
-					<div class="img-wrap d-flex align-items-stretch">
-						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service4.jpg);"></div>
-						<div class="col-md-12 col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-2">
-								<div class="px-1">
-									<H4>中资落地案例介绍</H4>
-									<p>睿泽国际已与多家中企签署协议，代理企业在西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
-								</div>
-								<div class="d-flex align-items-center mt-4">
-									<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="blog-entry">
-					<div class="img-wrap d-flex align-items-stretch">
-
-						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service1.jpg); "></div>
-						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-2">
-								<div class="px-1">
-									<H4>金融投资服务案例</H4>
-									<p><a>【案例一】华意压缩机集团收购西班牙Cubig。</a></p>
-									<p><a>【案例二】爱尔眼科收购西班牙Clinic Barviera。</a></p>
-								</div>
-								<div class="d-flex align-items-center mt-4">
-									<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		</div>
-	</div>
-</section>
-
-<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
-	<div class="overlay"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 suscribete_form">
-				<h2>更多信息请关注公众号</h2>
-				<p class="mb-0">请扫码关注</p>
-				<img src="images/publishQRCode.jpg" style="width: auto; height: 50%">
-			</div>
-		</div>
-	</div>
-</section>
 
 
 <!--合作伙伴图标-->
 <section class="ftco-section ftco-no-pb">
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-12 suscribete_form">
-				<h1>合作伙伴</h1>
-			</div>
-		</div>
+<!--		<div class="row">-->
+<!--			<div class="col-md-12 suscribete_form">-->
+<!--				<h1>Partners</h1>-->
+<!--			</div>-->
+<!--		</div>-->
 		<div class="row">
 
 			<div class="col-md-5 col-lg-1 ftco-animate">
@@ -540,8 +350,6 @@
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
 						</ul>
 					</div>
-
-
 				</div>
 			</div>
 
@@ -553,7 +361,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -564,7 +372,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -580,19 +388,18 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
-						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
-						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
-						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
-						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
-
+						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
+						<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
+						<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
 					</ul>
 				</div>
 			</div>
+
 			<div class="col-md-6 col-lg-3">
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2 mb-0">About</h2>
