--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -156,7 +156,8 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
 				<div class="col-md-12 suscribete_form">
-					<a href="company/salud.html"><h1 class="mb-4" style = "color: #f7f8f8" >特别推荐：MAPFRE高端医疗保险——公司报销保险</h1></a>
+					<a href="company/salud.html"><h2 class="mb-4" style = "color: #f7f8f8" >特别推荐：MAPFRE高端医疗保险</h2></a>
+					<a href="company/salud.html"><h1 class="mb-4" style = "color: #f7f8f8" >公司报销保险</h1></a>
 					<a href="company/salud.html"><h5 style = "color: #f7f8f8" href="company/salud.html">让您可以选择世界上任何医生或医院。它允许您不受限制地访问西班牙的医生和医院网络，并包括美国批准的广泛医院网络。
 						MAPFRE健康保险医疗服务部精心挑选了所有这些专业人员和健康中心，以确保您得到最好的照顾，为您和您的家人提供全面承保的健康保险。</h5></a>
 				</div>
