--- a/contact_en.html
+++ b/contact_en.html
@@ -20,21 +20,20 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo.png"/></a>
+            <a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-                    <li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
-                    <li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
-                    <li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
-                    <li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-                    <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
-                    <li class="nav-item  active"><a href="contact.html" class="nav-link">联系我们</a></li>
+                    <li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+                    <li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
+                    <li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+                    <li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+                    <li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+                    <li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
+                    <li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
+                    <li class="nav-item active"><a href="contact_en.html" class="nav-link">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -45,11 +44,11 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">联系我们 | Contact Us</h1>
+                    <h1 class="mb-2 bread">Contact Us</h1>
                     <p class="breadcrumbs">
-                        <span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-                        <span class="mr-2"><a href="about.html">About <i class="ion-ios-arrow-forward"></i></a></span>
-                        <span class="mr-2"><a href="news.html">news <i class="ion-ios-arrow-forward"></i></a></span>
+                        <span class="mr-2"><a href="indexs_en.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
+                        <span class="mr-2"><a href="abouts_en.html">About <i class="ion-ios-arrow-forward"></i></a></span>
+                        <span class="mr-2"><a href="newss_en.html">news <i class="ion-ios-arrow-forward"></i></a></span>
                 </div>
             </div>
         </div>
@@ -96,32 +95,31 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 suscribete_form">
-                    <h2 class="mb-2 bread">加入我们 | 开放岗位</h2>
+                    <h2 class="mb-2 bread">Join Us | Opening Position</h2>
                     <div class="row wrapper">
                         <div class="col-md-5 col-lg-6 ftco-animate">
                             <div class="blog-entry">
 
                                 <div class="text bg-dark p-4">
-                                    <h2>云技术工程师</h2>
-                                    <p>职位类别：云技术工程师</p>
-                                    <p>工作地点：西班牙</p>
-                                    <p>工作年限：3年及以上</p>
-                                    <p>最低学历：本科及以上</p>
-                                    <p>所属行业：ICT</p>
+                                    <h2>Cloud Solution Architect</h2>
+                                    <p>Position：Cloud Technology</p>
+                                    <p>Location: Spain</p>
+                                    <p>Work Experience: 3 years</p>
+                                    <p>Degree: Bachelor</p>
                                     <br>
-                                    <p>职位描述</p>
-                                    <p>1.负责所辖地区行业的市场洞察与分析、市场开拓、制定区域市场策略、营销方案的实施和维护工作；</p>
-                                    <p>2.负责客户IT解决方案对接；</p>
-                                    <p>3.负责客户的定期拜访、沟通，与客户建立长期而稳定的合作关系，协助客户做好IT技术维护；</p>
+                                    <p>Job Description</p>
+                                    <p>1.Work closely with our expert virtual team together, to prepare presentation materials,
+                                        demonstration and proof-of-concept to our clients, assist our business development manager and work on a proper quotation.</p>
+                                    <p>2.Responsible for some documentations and materials enhancement/preparation.</p>
+                                    <p>3.Meet our clients together with our Business Development Manager, to present/demonstrate the solutions that you designed.</p>
                                     <br>
 
-                                    <p>职位要求</p>
-                                    <p>1.本科及以上学历，计算机、电子、通信、软件、数学等相关理工科专业，三年以上云/软件/网络或其他IT相关产品解决方案销售，对云技术有一定了解；</p>
-                                    <p>2.中文、英语、西班牙语商务交流水平；</p>
-                                    <p>3.对相关产品及市场有较深的理解，热爱解决方案销售工作，具备相关产品技术经验者优先；</p>
-                                    <p>4.熟悉相关行业特点及市场运作方式， 熟悉相关行业标准；</p>
-                                    <p>6.较强的沟通协调能力，良好的分析与解决问题的能力、商务谈判及人际关系处理能力；</p>
-                                    <p>7.高度的工作热情和良好的职业道德，具备较好的抗压能力，能适应出差。</p>
+                                    <p>Position Requirement</p>
+                                    <p>1.Bachelor degree or above, computer, electronics, communication, software, mathematics and other related science and engineering majors, at least 5 years job working experiences.</p>
+                                    <p>2.Chinese, English, Spanish business communication level.</p>
+                                    <p>3.Candidates with any Cloud provider certificate will be an advantage.</p>
+                                    <p>5.Good communication skills, a good team player and has positive attitude to work.</p>
+                                    <p>6.Able to work under high pressure, a quick learner with a passion for cloud technology. Able to think strategically about businesses, products and technical challenges.</p>
                                 </div>
                             </div>
                         </div>
@@ -129,25 +127,26 @@
                         <div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: flex-start">
                             <div class="blog-entry">
                                 <div class="text bg-dark p-4">
-                                    <h2>MAPFRE保险销售</h2>
-                                    <p>职位类别：企业保险销售</p>
-                                    <p>工作地点：西班牙</p>
-                                    <p>工作年限：3年及以上</p>
-                                    <p>最低学历：本科及以上</p>
-                                    <p>所属行业：保险</p>
+                                    <h2>MAPFRE Insurance Sale</h2>
+                                    <p>Location: Spain</p>
+                                    <p>Work Experience: 3 years</p>
+                                    <p>Degree: Bachelor</p>
                                     <br>
-                                    <p>职位描述</p>
-                                    <p>1.负责所辖地区企业保险业务市场开拓、制定区域市场策略、营销方案的实施和维护工作；</p>
-                                    <p>2.依据公司策略，运用各种销售工具开发新客户，建立、发展和维护客户关系，提升公司影响力；</p>
-                                    <p>3.负责客户的定期拜访、沟通，进行客户关系的维护和进一步开发，与客户建立长期而稳定的合作关系；</p>
+                                    <p>Job Description</p>
+                                    <p>1.Responsible for the market development of enterprise insurance business in the area under its jurisdiction,
+                                        the formulation of regional market strategies, and the implementation and maintenance of marketing plans.</p>
+                                    <p>2.According to the company's strategy, use various sales tools to develop new customers, establish,
+                                        develop and maintain customer relationships, and enhance the company's influence.</p>
+                                    <p>3.Responsible for regular customer visits and communication, maintenance and further development of customer relationships,
+                                        and establishing long-term and stable cooperative relationships with customers.</p>
                                     <br>
-                                    <p>职位要求</p>
-                                    <p>1.本科及以上学历，了解保险相关行业产品及具有相关销售经验；</p>
-                                    <p>2.中文、英语、西班牙语商务交流水平；</p>
-                                    <p>3.对相关产品及市场有较深的理解，热爱销售工作，能主导市场拓展与销售工作，具备相关产品经验者优先；</p>
-                                    <p>4.熟悉相关行业特点及市场运作方式， 熟悉相关行业标准；</p>
-                                    <p>6.较强的沟通协调能力，良好的分析与解决问题的能力、商务谈判及人际关系处理能力；</p>
-                                    <p>7.高度的工作热情和良好的职业道德，具备较好的抗压能力，能适应出差。</p>
+                                    <p>Position Requirement</p>
+                                    <p>1.Bachelor degree or above,at least 2 years job working experiences. </p>
+                                    <p>2.Chinese, English, Spanish business communication level.</p>
+                                    <p>3.Deep understanding of related products and markets, love sales work, be able to lead market development and sales work,
+                                        experience in related products is preferred;</p>
+                                    <p>5.Strong communication and coordination skills, good analysis and problem-solving skills, business negotiation and interpersonal relationship handling skills.</p>
+                                    <p>6.High work enthusiasm and good professional ethics, with good ability to withstand pressure.</p>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +178,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 suscribete_form">
-                    <h2>商业洽谈请扫码联系</h2>
+                    <h2>Scan QR code to contact for business negotiation</h2>
                     <div class="container-wrap">
                         <div class="row no-gutters">
 
@@ -225,8 +224,6 @@
                                 <li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
                             </ul>
                         </div>
-
-
                     </div>
                 </div>
 
@@ -238,7 +235,7 @@
                         <div class="block-21 mb-4 d-flex">
                             <a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
                             <div class="text">
-                                <h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+                                <h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
                                 <div class="meta">
                                     <div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
                                     <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -249,7 +246,7 @@
                         <div class="block-21 mb-5 d-flex">
                             <a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
                             <div class="text">
-                                <h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+                                <h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
                                 <div class="meta">
                                     <div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
                                 </div>
@@ -265,19 +262,18 @@
                     <div class="ftco-footer-widget mb-5 ml-md-4">
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
-                            <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-                            <li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
-                            <li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
-                            <li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
-                            <li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-                            <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
-                            <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
-
+                            <li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+                            <li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
+                            <li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+                            <li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+                            <li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+                            <li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
+                            <li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
+                            <li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-md-6 col-lg-3">
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2 mb-0">About</h2>
@@ -305,8 +301,6 @@
             </div>
         </div>
     </footer>
-
-
 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
     <script src="js/jquery.min.js"></script>
