--- a/gooverseas_en.html
+++ b/gooverseas_en.html
@@ -21,21 +21,20 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
-				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
-				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
-				<li class="nav-item active"><a href="investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
-				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
+				<li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item active"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
+				<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
+				<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -45,125 +44,135 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_11.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_10.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">金融投资保险服务</h1>
-				<h4 class="mb-2 bread">中文、英文、西语、法语专业投资理财服务</h4>
-				<p>
-					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
-					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
-					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE保险</a>
-				</p>
+				<h1 class="mb-2 bread">Services for Chinese Enterprise</h1>
+				<p class="breadcrumbs">
+<!--					<a href="gooverseas/gooverseas/go_en.html" class="btn btn-success px-4 py-3">Company Establishment</a>-->
+<!--					<a href="gooverseas/hr/hr_en.html" class="btn btn-success px-4 py-3">Talent Hunting</a>-->
+<!--					<a href="gooverseas/marketing/marketing_en.html" class="btn btn-success px-4 py-3">Marketing</a>-->
+<!--					<a href="gooverseas/admin/admin_en.html" class="btn btn-success px-4 py-3">Administrative Services</a>-->
+
+					<a class="btn btn-success px-4 py-3">Company Establishment</a>
+					<a  class="btn btn-success px-4 py-3">Talent Hunting</a>
+					<a  class="btn btn-success px-4 py-3">Marketing</a>
+					<a  class="btn btn-success px-4 py-3">Administrative Services</a>
 			</div>
 		</div>
 	</div>
 </section>
-
 
 
 
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div id = "rowBlogs" class="row" class = "wrapper">
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+
+			<div class="col-md-12 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="investment/investment/investment_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
-							<span class="yr">2023</span>
+							<span class="yr">*****</span>
 						</div>
 					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment/investment/investment_projects.html">金融投资项目</a></h3>
-						<p>睿泽国际CEO Yanik作为在欧洲从业20余年资深金融投行专家，具有欧洲上市保荐人资格，持有欧洲金融投资顾问执照EFA和美国异类金融投资分析师执照CAIA，为高净值客户提供量身定制最佳风险收益全球配置解决方案。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="investment/investment/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
+					<div class="text bg-white p-2">
+						<h3 class="heading"><a >Company Establishment</a></h3>
+						<p>BOI provides high-end consulting services such as strategy, investment, economic and trade docking, channel expansion, etc.
+							for Chinese capital to go overseas, helping enterprises to gain a deep understanding of the local market and business environment,
+							and find the right direction for going overseas.</p>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p class="mb-0"><a href="gooverseas/gooverseas/go_en.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="ml-auto mb-0">-->
+<!--							</p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-12 col-lg-3 ftco-animate">
 				<div class="blog-entry">
-					<a href="investment/investment/asset_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/asset-management.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/hr/hr.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
-							<span class="yr">2023</span>
+							<span class="yr">*****</span>
 						</div>
 					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment/investment/asset_projects.html">资产管理</a></h3>
-						<p>睿泽国际CEO Yanik作为在伊比利亚唯一持有资产管理执照华人，为HNW高净值人士全球资产配置需求，提供专属私人银行和家族资产管理服务。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="investment/investment/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
+					<div class="text bg-white p-2">
+						<h3 class="heading"><a>Talent Hunting</a></h3>
+						<p>BOI provides Chinese-English-French-Portuguese-speaking high-end talent hunting services for Chinese-funded enterprises,
+							help enterprises find high-end talents suitable for the local business environment, and help enterprises expand the southern European market.</p>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p class="mb-0"><a href="gooverseas/hr/hr_en.html" class="btn btn-secondary">查看现有岗位信息详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-12 col-lg-3 ftco-animate">
 				<div class="blog-entry">
-					<a href="investment/mapfre/mapfre_seguro.html" class="block-20 d-flex align-items-end" style="background-image: url('images/seguro.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/marketing/marketing.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
-							<span class="yr">2023</span>
+							<span class="yr">*****</span>
 						</div>
 					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment/mapfre/mapfre_seguro.html">保险业务</a></h3>
-						<p>睿泽国际作为西班牙最大保险公司MAPFRE高级合作伙伴和金融资产管理顾问，为企业提供全方位保险产品，点击查看产品目录。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="investment/mapfre/mapfre_seguro.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+					<div class="text bg-white p-2">
+						<h3 class="heading"><a>Marketing</a></h3>
+						<p>BOI provides services such as event planning, material design and production, and execution of marketing activities
+							for enterprises in the Iberian Peninsula, including but not limited to exhibitions, roadshows, summits, company annual meetings,
+							entrepreneurial competitions, etc.</p>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p  class="mb-0"><a href="gooverseas/marketing/marketing_en.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--						</div>-->
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-12 col-lg-3 ftco-animate">
+				<div class="blog-entry">
+<!--					href="gooverseas/admin/admin_en.html"-->
+					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/admin/admin.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">*****</span>
 						</div>
+					</a>
+					<div class="text bg-white p-2">
+						<h3 class="heading"><a >Administrative Services</a></h3>
+						<p>BOI provides enterprises with corporate administrative services such as house rental, decoration design, furniture purchase,
+							property management company, temporary holiday event organization, furniture leasing, etc.,
+							as well as personal services such as visas for expatriate employees, local residence card processing,
+							local accompanying translation for employees, and employee insurance.</p>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p  class="mb-0"><a href="gooverseas/admin/admin_en.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
 
 		</div>
-
 	</div>
 </section>
 
 
-<section class=" ftco-section home-slider owl-carousel">
-	<div class="slider-item" style="background-image:url(images/seguro.jpg)">
-		<div class="container">
-			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
-				<div class="col-md-12 suscribete_form">
-					<h1 class="mb-4">本月推荐保险产品</h1>
-					<a href="investment/mapfre/company/salud.html"></a><h2 style = "color: #f7f8f8">企业员工高端医疗保险</h2></a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="slider-item" style="background-image:url(investment/mapfre/mapfre-seguro.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
-				<div class="col-md-12 suscribete_form">
-					<h1 class="mb-4">本月推荐保险产品</h1>
-					<a href="investment/mapfre/mapfre_seguro.html"></a><h2 style = "color: #f7f8f8">企业资产保护保险</h2></a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-
-<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(gooverseas/1.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<h2>商业洽谈请扫码联系</h2>
+				<h2>BOI — Helping Chinese-funded Enterprises to Europe</h2>
+				<p class="mb-0">China's investment in Europe is a big blue ocean. From the point of view of the investment community,
+					even if a company only focuses on plankton on the sea surface, it still has the opportunity to obtain huge profits.
+					Being in a foreign country, facing a language, culture, law, and uncertain IT work environment that is very different from the domestic one,
+					choose a partner correctly to reduce interference and focus more on the business.</p>
+				<br>
+				<h2>Scan QR code to contact for business negotiation</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
 
@@ -190,6 +199,7 @@
 	</div>
 </section>
 
+
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
 		<div class="row mb-5">
@@ -207,8 +217,6 @@
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
 						</ul>
 					</div>
-
-
 				</div>
 			</div>
 
@@ -220,7 +228,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -231,7 +239,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -247,19 +255,18 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
-						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
-						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
-						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
-						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
-
+						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
+						<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
+						<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
 					</ul>
 				</div>
 			</div>
+
 			<div class="col-md-6 col-lg-3">
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2 mb-0">About</h2>
@@ -287,7 +294,6 @@
 		</div>
 	</div>
 </footer>
-
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
 <script src="js/jquery.min.js"></script>
